# Engine

./: .gitmodules  Application  CMakeLists.txt  LICENSE  Makefile  README.md  TIMES_INFO.csv  engineInfo.ini  imgui.ini
dependencies/GLEW/lib/: libGLEW.2.1.0.dylib
dependencies/OBJ-Loader/: OBJ_Loader.h
dependencies/imgui-master/examples/example_glfw_opengl3/: .#main.cpp  Makefile
res/entities/: Arrows.entity  Arrows.entity~  Dodecahedron.entity  Dodecahedron.entity~  DodecahedronPhong.entity  LightGizmo.entity  LightGizmo.entity~  Plane.entity  singleArrow.entity  smallArrows.entity  spiderOBJ.entity  sponza.entity  translationArrows.entity  xAxisArrow.entity  yAxisArrow.entity  zAxisArrow.entity
res/fonts/: TIMES_INFO.csv  TIMES_INFO.json  TIMES_INFO_4.csv
res/materials/: defaultMaterial.mat
res/models/: #partial.obj#  #sphere.obj#  Quad.obj~  Sphere.stl  Spider.3ds  Spider.md5anim  Spider.md5mesh  Spider.mtl  Spider.stl  arrows.meshes  arrows.mtl  bunny.meshes  cornell-box.meshes  cube.meshes  cube.mtl  cube.mtl~  spacestation.meshes
res/palettes/: 842.palette  882.palette  binary.bmp~  toxicPalette.palette
res/scenes/: blankScene.scene  testImportModel.scene  testScene.scene  testScene.scene~
res/shaders/: AlphaTextFrag.glsl  AlphaTextVert.glsl  basicFlatFrag.glsl  basicFlatVertex.glsl  basicLightFrag.glsl  basicLightVertex.glsl  basicLightingIncludes.glsl  basicPhongFrag.glsl  basicPhongVertex.glsl  bitUtils.glsl  bloomDownsample.glsl  bloomFirstDownsample.glsl  bloomMix.glsl  debugGeometryFrag.glsl  debugGeometryVert.glsl  debugGeometryVert.glsl~  depthFrag.glsl  dynamicVert.glsl  normalVisFrag.glsl  normalVisVertex.glsl  plainTextureFrag.glsl  plainTextureVertex.glsl  screenShadervert.glsl  screen_auto_exposure.glsl  screen_basic.glsl  screen_gamma.glsl  screen_gamma.glsl~  screen_tone_map.glsl  screen_tone_map_gamma.glsl  shadowAndToneMappingUtils.glsl  shadowMapVert.glsl  skinnedBasicLightVertex.glsl  skinnedMeshVertex.glsl  skinnedShadowMapVert.glsl  texCoordVisFrag.glsl
res/shaders/bloom/: bloomMix.glsl  bloomUpsample.glsl  bloomVertex.glsl
res/shaders/text/: textBasicFrag.glsl  textMSDFFrag.glsl
res/tables/: MarchingCubesTable.cpp  MarchingCubesTable.cpp~
src/: .#Application.cpp  Application.cpp  Bitmap.cpp  CLHelpers.cpp  CMakeLists.txt  Camera.cpp  Camera.h  CaveGeneration.cpp  Collision.cpp  Collision.h  Debug.cpp  DebugConsole.cpp  DebugConsole.h  DebugConsoleStyle.cpp  DebugLogging.cpp  DebugSelection.cpp  DebugSelection.h  EntityRegistry.cpp  EntityRegistry.h  ExportTools.cpp  FBX.cpp  Files.cpp  Font.cpp  HandmadeMath.h  I_String.h  ImportUtils.cpp  Input.cpp  LinkedList.cpp  MD5Loader.cpp  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Palette.cpp  PerlinNoise.cpp  Physics.h  Random.cpp  Renderer.cpp  Renderer.h  RendererDebugGeometry.cpp  (+23 more)
src/OldRenderer/: #Renderer.cpp#  Renderer.cpp  Renderer.cpp~  Renderer.h
